[tool.poetry]
name = "telegram"
version = "0.1.0"
description = ""
authors = ["dapt <diegodapt18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
requests = "^2.31.0"
python-telegram-bot = "^20.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
